[~] Changed call to action text
[~] Resized and compressed Facebook Cover image

--- a/src/faq.html
+++ b/src/faq.html
@@ -34,7 +34,7 @@
                     <div class="block-faq mb-50">
                         <h4 class="mb-10">Where do I sign up? </h4>
                         <p>
-                            You can sign up right here: <a class="orange-link" target="_blank" href="https://apply.hacktival.io/">https://apply.hacktival.io/</a>
+                            You can sign up and apply right here: <a class="orange-link" target="_blank" href="https://apply.hacktival.io/">https://apply.hacktival.io/</a>
                         </p>
                     </div>
                     <div class="block-faq mb-50">
