--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
           <div class="row pt4">
                 <div class="col-sm-12 text-center">
-                    <a href="https://apply.hacktival.io/" target="_blank" class="but">SIGN UP</a>
+                    <a href="https://apply.hacktival.io/" target="_blank" class="but">APPLY NOW</a>
                 </div>
             </div> 
         </div>
