Added page for data privacy policy. Modified template.html accordingly.

--- a/src/template.html
+++ b/src/template.html
@@ -31,7 +31,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <!-- <link rel="manifest" href="/manifest.json"> -->
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -172,8 +172,8 @@
                             <li><a href="https://hackundsoehne.de/team" target="_blank">Team</a>
                             <li><a href="https://hackundsoehne.de/contact" target="_blank">Contact</a>
                             <li><a href="coc-public.pdf" target="_blank">Code of Conduct</a>
-                            <li><a href="https://hackundsoehne.de/terms" target="_blank">Terms</a>
-                            <li><a href="https://hackundsoehne.de/dataprivacy" target="_blank">Data privacy</a>
+                            <li><a href="terms" target="_blank">Terms</a>
+                            <li><a href="dataprivacy" target="_blank">Data privacy</a>
                         </ul>
                     </div>
                 </div>
